--- a/scss/index.scss
+++ b/scss/index.scss
@@ -152,21 +152,16 @@ html.dark .features {
 
 	&__title {
 		max-width: rem(480px);
-		margin-bottom: rem(34px);
 	}
 
 	&__text {
-		margin-bottom: rem(26px);
 		max-width: rem(670px);
 	}
 	&__more {
-		position: relative;
 		display: flex;
 		text-align: center;
 		max-width: rem(108px);
-		font-weight: 700;
-		line-height: 1em;
-		@extend %underline;
+		padding-bottom: rem(1px);
 	}
 	&__stats {
 		img {
@@ -428,7 +423,6 @@ html.dark .brings-bg__2 {
 	}
 
 	&__title {
-		margin-bottom: rem(34px);
 	}
 
 	&__text {
@@ -472,4 +466,83 @@ html.dark .brings-bg__2 {
 		line-height: em(22px, 17px);
 		letter-spacing: em(0.02px, 17px);
 	}
+}
+
+//* exp section
+.exp {
+	padding-bottom: 0;
+	&__container {
+	}
+
+	&__body {
+		display: flex;
+		@include adaptiv-value("gap", 20, 80, 1);
+		align-items: center;
+	}
+
+	&__img {
+		flex: 1;
+		img {
+			border-radius: 41px 41px 0 0;
+			width: 100%;
+			height: rem(500px);
+			object-position: center bottom;
+			object-fit: contain;
+			max-height: 75vh;
+		}
+	}
+
+	&__content {
+		flex: 0 1 57.16%;
+		* {
+			max-width: rem(525px, 1);
+		}
+	}
+
+	&__subtitle {
+	}
+
+	&__title {
+	}
+
+	&__text {
+	}
+
+	&__more {
+	}
+}
+
+//* employers section
+.employers {
+	padding: rem(126px) 0 rem(114px) 0;
+	background: linear-gradient(
+			90deg,
+			rgba(255, 255, 255, 0.7) 0%,
+			rgba(255, 255, 255, 0.3) 40%,
+			rgba(255, 255, 255, 0) 100%
+		),
+		url(../img/employers.jpg) 50% 0 / cover no-repeat;
+	&__container {
+	}
+	&__body {
+	}
+	&__content {
+		max-width: 50%;
+	}
+
+	&__subtitle {
+	}
+
+	&__title {
+	}
+
+	&__text {
+	}
+
+	&__more {
+	}
+}
+html.dark .employers {
+	background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0) 100%),
+		url(../img/employers.jpg);
 }
