--- a/scss/mediaQueries.scss
+++ b/scss/mediaQueries.scss
@@ -21,6 +21,15 @@
 	.block-features__img {
 		margin-right: em(10px);
 	}
+	.exp__content {
+		* {
+			margin-left: auto;
+			margin-right: rem(20px);
+		}
+	}
+	.employers__content {
+		@include adaptiv-value("padding-right", 120, 0, 1);
+	}
 }
 @media (min-width: em(576px, 16px)) {
 }
@@ -158,17 +167,16 @@
 		}
 	}
 	.why {
-		&__body {
-			grid-template-columns: 1fr;
-			grid-template-rows: 1fr 1fr;
-			grid-template-areas: "." ".";
-		}
 		&__content {
 			text-align: center;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
-			flex-wrap: nowrap;
+		}
+		&__body {
+			grid-template-columns: 1fr;
+			grid-template-rows: 1fr 1fr;
+			grid-template-areas: "." ".";
 		}
 	}
 	.stats {
@@ -183,6 +191,12 @@
 	}
 }
 @media (max-width: em(767px, 16px)) {
+	.type-block {
+		text-align: center;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
 	.hero {
 		background-position: 40%, 50%;
 	}
@@ -227,6 +241,26 @@
 			}
 		}
 	}
+	.exp__body {
+		flex-direction: column-reverse;
+	}
+
+	.employers {
+		background: linear-gradient(
+				90deg,
+				rgba(255, 255, 255, 0.9) 10%,
+				rgba(255, 255, 255, 0.8) 50%,
+				rgba(255, 255, 255, 0.7) 90%
+			),
+			url(../img/employers.jpg) 40% 100% / cover no-repeat;
+		&__content {
+			max-width: 70%;
+		}
+	}
+	html.dark .employers {
+		background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.9) 10%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.7) 90%),
+			url(../img/employers.jpg);
+	}
 }
 @media (max-width: em(575px, 16px)) {
 	.hero {
@@ -263,6 +297,22 @@
 	}
 	.plan__numbers {
 		text-align: center;
+	}
+	.employers {
+		background: linear-gradient(
+				90deg,
+				rgba(255, 255, 255, 0.9) 10%,
+				rgba(255, 255, 255, 0.85) 50%,
+				rgba(255, 255, 255, 0.9) 90%
+			),
+			url(../img/employers.jpg) 60% 100% / cover no-repeat;
+		&__content {
+			max-width: 100%;
+		}
+	}
+	html.dark .employers {
+		background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.85) 10%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.85) 90%),
+			url(../img/employers.jpg);
 	}
 }
 @media (max-width: em(420px, 16px)) {
