--- a/scss/header.scss
+++ b/scss/header.scss
@@ -84,7 +84,6 @@ html.dark .header {
 		li {
 			position: relative;
 			min-width: fit-content;
-			@extend %underline;
 		}
 		z-index: 2;
 	}
@@ -150,7 +149,6 @@ html.dark .header {
 		position: absolute;
 		top: 100%;
 		right: -50%;
-		padding: 10px 15px;
 		border-radius: 3px;
 		background-color: var(--light-color);
 		transition: all 0.6s ease 0s;
@@ -161,8 +159,13 @@ html.dark .header {
 			align-items: center;
 			justify-content: center;
 			flex: 1 1 auto;
+			padding: 10px 15px;
+			transition: all 0.4s ease 0s;
 			& a::before {
 				margin-right: rem(15px);
+			}
+			&:hover {
+				background-color: rgba(255, 255, 255, 0.07);
 			}
 		}
 		a {
