--- a/scss/index.scss
+++ b/scss/index.scss
@@ -224,7 +224,7 @@ html.dark .features {
 		font-weight: 700;
 		font-size: rem(13px);
 		line-height: em(22px, 13px);
-		letter-spacing: em(0.02px, 13px);
+		letter-spacing: em(0.02px, 13px, $unrounded);
 		span {
 			text-decoration-line: underline;
 		}
@@ -299,7 +299,6 @@ html.dark .features {
 
 .brings {
 	&__wrapper {
-		position: relative;
 	}
 	&__container {
 	}
@@ -312,34 +311,22 @@ html.dark .features {
 	}
 
 	&__body {
-		display: flex;
-		align-items: center;
-		justify-content: center;
 		@include adaptiv-value("gap", 200, -150, 1);
 	}
 }
 .brings-block {
 	&__1 {
-		flex: 1;
 	}
 
 	&__2 {
-		flex: 1;
 	}
 }
 .brings-bg {
-	width: 50%;
-	height: 100%;
-	position: absolute;
-	z-index: -1;
-	top: 0;
 	&__1 {
-		left: 0;
 		background-color: var(--accent-blue);
 	}
 
 	&__2 {
-		right: 0;
 		background-color: var(--main-color);
 	}
 }
@@ -391,7 +378,7 @@ html.dark .brings-bg__2 {
 	&__2 {
 		font-size: rem(20px);
 		line-height: 1.7em;
-		letter-spacing: em(0.02px, 20px);
+		letter-spacing: em(0.02px, 20px, $unrounded);
 		color: var(--base-color);
 		> :not(:last-child) {
 			margin-bottom: rem(34px);
@@ -464,7 +451,7 @@ html.dark .brings-bg__2 {
 		font-weight: 700;
 		font-size: rem(13px);
 		line-height: em(22px, 17px);
-		letter-spacing: em(0.02px, 17px);
+		letter-spacing: em(0.02px, 17px, $unrounded);
 	}
 }
 
@@ -545,4 +532,160 @@ html.dark .brings-bg__2 {
 html.dark .employers {
 	background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0) 100%),
 		url(../img/employers.jpg);
+}
+//* Sponsor section
+.sponsor {
+	&-slider__container {
+		position: relative;
+	}
+	&__container {
+		&-big {
+			> :not(:last-child) {
+				margin-bottom: rem(110px);
+			}
+		}
+		&-small {
+			max-width: rem(calc(1020px + 50px));
+			padding: 0 rem(25px);
+		}
+	}
+
+	&__title {
+		text-align: center;
+	}
+
+	&__slider {
+		position: static;
+	}
+
+	&__wrapper {
+	}
+
+	&__slide {
+		display: flex;
+		justify-content: center;
+	}
+
+	&__img {
+	}
+
+	&__button-prev,
+	&__button-next {
+		z-index: 0;
+		&::before {
+			font-size: rem(25px);
+			color: var(--icon-color);
+		}
+		&::after {
+			content: none;
+		}
+	}
+
+	&__button-prev {
+		left: rem(15px);
+	}
+
+	&__button-next {
+		right: rem(15px);
+	}
+
+	&__line {
+		margin: rem(10px) rem(25px) 0;
+		background: rgba(199, 199, 199, 0.37);
+		height: rem(1px);
+	}
+}
+
+//* Posts
+.posts {
+	&__container {
+	}
+
+	&__wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		gap: rem(60px) rem(40px);
+		padding: 0 rem(27px);
+		justify-content: center;
+	}
+
+	&__post {
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+	}
+}
+.post {
+	transition: all 0.3s ease 0s;
+	&__img {
+		margin-bottom: rem(20px);
+		img {
+			max-width: 100%;
+			min-width: rem(275px);
+		}
+	}
+
+	&__subtitle {
+		font-weight: 400;
+		margin-bottom: rem(15px);
+	}
+
+	&__title {
+		font-size: rem(20px);
+	}
+	&:hover {
+		filter: drop-shadow(0px 0px 10px var(--accent-color));
+	}
+}
+
+//* start section
+.start {
+	padding-bottom: 0;
+	&__wrapper {
+	}
+
+	&__container {
+	}
+
+	&__body {
+		gap: rem(240px);
+	}
+
+	&__content {
+		padding: rem(144px) 0 rem(96px) 0;
+		> :not(:last-child) {
+			margin-bottom: rem(60px);
+		}
+	}
+
+	&__title {
+		max-width: rem(550px);
+		> p:not(:last-child) {
+			margin-bottom: rem(46px);
+		}
+	}
+
+	&__btn {
+	}
+}
+.start-block {
+	&__1 {
+	}
+
+	&__2 {
+	}
+}
+.start-bg {
+	&__1 {
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: top;
+		}
+	}
+
+	&__2 {
+		background-color: var(--accent-blue);
+	}
 }
