--- a/scss/mediaQueries.scss
+++ b/scss/mediaQueries.scss
@@ -197,18 +197,7 @@
 		flex-direction: column;
 		align-items: center;
 	}
-	.hero {
-		background-position: 40%, 50%;
-	}
-	.features {
-		text-align: center;
-		flex-direction: column;
-	}
-	.block-features {
-		flex-direction: column;
-		flex: 1 1 auto;
-	}
-	.brings {
+	.full-screen-section {
 		&__body {
 			flex-direction: column;
 			text-align: center;
@@ -221,6 +210,22 @@
 				bottom: 0;
 			}
 		}
+		&__content {
+			padding-top: rem(320px);
+		}
+	}
+	.hero {
+		background-position: 40%, 50%;
+	}
+	.features {
+		text-align: center;
+		flex-direction: column;
+	}
+	.block-features {
+		flex-direction: column;
+		flex: 1 1 auto;
+	}
+	.brings {
 		&__subtitle {
 			left: 50%;
 			transform: translate(-50%, 0);
@@ -260,6 +265,10 @@
 	html.dark .employers {
 		background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.9) 10%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.7) 90%),
 			url(../img/employers.jpg);
+	}
+	.post {
+		text-align: center;
+		justify-content: center;
 	}
 }
 @media (max-width: em(575px, 16px)) {
