--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,11 @@ h6 {
   height: 60px;
 }
 
+.svg-footer-logo-dims {
+  width: 98px;
+  height: 28px;
+}
+
 html .page__theme.icon-moon,
 html .page__theme.icon-sun {
   -webkit-transform: rotate(162deg) scale(0);
@@ -405,8 +410,11 @@ section {
   padding: 4.29rem 0;
 }
 
-.menu__list li::after,
-.content__more::after {
+.underline {
+  position: relative;
+}
+
+.underline::after {
   -webkit-transition: width 0.3s ease 0s;
   -o-transition: width 0.3s ease 0s;
   transition: width 0.3s ease 0s;
@@ -422,8 +430,7 @@ section {
   background-color: var(--main-color);
 }
 
-.menu__list li:hover::after,
-.content__more:hover::after {
+.underline:hover::after {
   width: 100%;
 }
 
@@ -493,6 +500,50 @@ section {
 
 .type-block .text {
   margin-bottom: 1.71rem;
+}
+
+.full-screen-section__wrapper {
+  position: relative;
+}
+
+.full-screen-section__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.full-screen-section-block__1 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.full-screen-section-block__2 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.full-screen-section-bg {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+}
+
+.full-screen-section-bg__1 {
+  left: 0;
+}
+
+.full-screen-section-bg__2 {
+  right: 0;
 }
 
 .header {
@@ -718,7 +769,6 @@ html.dark .header {
   position: absolute;
   top: 100%;
   right: -50%;
-  padding: 10px 15px;
   border-radius: 3px;
   background-color: var(--light-color);
   -webkit-transition: all 0.6s ease 0s;
@@ -739,10 +789,18 @@ html.dark .header {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+  padding: 10px 15px;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
 }
 
 .login-list > li a::before {
   margin-right: 1.07rem;
+}
+
+.login-list > li:hover {
+  background-color: rgba(255, 255, 255, 0.07);
 }
 
 .login-list a {
@@ -1037,7 +1095,7 @@ html.dark .features {
   font-weight: 700;
   font-size: 0.93rem;
   line-height: 1.69em;
-  letter-spacing: 0em;
+  letter-spacing: 0.0015em;
 }
 
 .stats__text span {
@@ -1123,10 +1181,6 @@ html.dark .features {
   height: 21.43rem;
 }
 
-.brings__wrapper {
-  position: relative;
-}
-
 .brings__subtitle {
   font-weight: 400;
   color: var(--main);
@@ -1135,45 +1189,14 @@ html.dark .features {
 }
 
 .brings__body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   gap: 200px;
 }
 
-.brings-block__1 {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.brings-block__2 {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.brings-bg {
-  width: 50%;
-  height: 100%;
-  position: absolute;
-  z-index: -1;
-  top: 0;
-}
-
 .brings-bg__1 {
-  left: 0;
   background-color: var(--accent-blue);
 }
 
 .brings-bg__2 {
-  right: 0;
   background-color: var(--main-color);
 }
 
@@ -1225,7 +1248,7 @@ html.dark .brings-bg__2 {
 .brings-text__2 {
   font-size: 1.43rem;
   line-height: 1.7em;
-  letter-spacing: 0em;
+  letter-spacing: 0.001em;
   color: var(--base-color);
 }
 
@@ -1298,7 +1321,7 @@ html.dark .brings-bg__2 {
   font-weight: 700;
   font-size: 0.93rem;
   line-height: 1.29em;
-  letter-spacing: 0em;
+  letter-spacing: 0.0012em;
 }
 
 .exp {
@@ -1359,6 +1382,374 @@ html.no-webp.dark .employers {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.8)), color-stop(60%, rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0))), url(../img/employers.jpg);
   background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0) 100%), url(../img/employers.jpg);
   background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.4) 60%, rgba(0, 0, 0, 0) 100%), url(../img/employers.jpg); }
+
+.sponsor-slider__container {
+  position: relative;
+}
+
+.sponsor__container-big > :not(:last-child) {
+  margin-bottom: 7.86rem;
+}
+
+.sponsor__container-small {
+  max-width: 76.43rem;
+  padding: 0 1.79rem;
+}
+
+.sponsor__title {
+  text-align: center;
+}
+
+.sponsor__slider {
+  position: static;
+}
+
+.sponsor__slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sponsor__button-prev,
+.sponsor__button-next {
+  z-index: 0;
+}
+
+.sponsor__button-prev::before,
+.sponsor__button-next::before {
+  font-size: 1.79rem;
+  color: var(--icon-color);
+}
+
+.sponsor__button-prev::after,
+.sponsor__button-next::after {
+  content: none;
+}
+
+.sponsor__button-prev {
+  left: 1.07rem;
+}
+
+.sponsor__button-next {
+  right: 1.07rem;
+}
+
+.sponsor__line {
+  margin: 0.71rem 1.79rem 0;
+  background: rgba(199, 199, 199, 0.37);
+  height: 0.07rem;
+}
+
+.posts__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 4.29rem 2.86rem;
+  padding: 0 1.93rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.posts__post {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.post {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.post__img {
+  margin-bottom: 1.43rem;
+}
+
+.post__img img {
+  max-width: 100%;
+  min-width: 19.64rem;
+}
+
+.post__subtitle {
+  font-weight: 400;
+  margin-bottom: 1.07rem;
+}
+
+.post__title {
+  font-size: 1.43rem;
+}
+
+.post:hover {
+  -webkit-filter: drop-shadow(0px 0px 10px var(--accent-color));
+          filter: drop-shadow(0px 0px 10px var(--accent-color));
+}
+
+.start {
+  padding-bottom: 0;
+}
+
+.start__body {
+  gap: 17.14rem;
+}
+
+.start__content {
+  padding: 10.29rem 0 6.86rem 0;
+}
+
+.start__content > :not(:last-child) {
+  margin-bottom: 4.29rem;
+}
+
+.start__title {
+  max-width: 39.29rem;
+}
+
+.start__title > p:not(:last-child) {
+  margin-bottom: 3.29rem;
+}
+
+.start-bg__1 img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+}
+
+.start-bg__2 {
+  background-color: var(--accent-blue);
+}
+
+.footer {
+  padding: 7.14rem 0 3.57rem;
+  color: var(--base-color);
+  background-color: var(--main-color);
+}
+
+.footer a,
+.footer p {
+  line-height: 1.71em;
+  letter-spacing: 0.0014em;
+  color: var(--base-color);
+}
+
+.footer p {
+  font-size: 1rem;
+}
+
+.main-footer__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main-footer__menu {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 42.29rem;
+          flex: 0 1 42.29rem;
+}
+
+.main-footer__contact {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 25.36rem;
+          flex: 0 1 25.36rem;
+}
+
+.main-footer hr {
+  height: 1px;
+  background-color: var(--base-color);
+  margin: 5rem 0;
+}
+
+.footer-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 8.21rem;
+}
+
+.footer-menu__logo {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  font-size: 7rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  -webkit-transform: translateY(-60px);
+      -ms-transform: translateY(-60px);
+          transform: translateY(-60px);
+}
+
+.footer-menu__logo:hover {
+  -webkit-filter: drop-shadow(0px 0px 10px var(--gray-color));
+          filter: drop-shadow(0px 0px 10px var(--gray-color));
+}
+
+.footer-menu__block li {
+  font-size: 1.14rem;
+  line-height: 1.69em;
+}
+
+.footer-menu__block li.footer-menu__title {
+  font-weight: 700;
+  font-size: 0.93rem;
+  line-height: 1.85em;
+  letter-spacing: 0.0015em;
+  text-transform: uppercase;
+}
+
+.footer-menu__block li:after {
+  background-color: var(--base-color);
+  left: 0;
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none;
+}
+
+.footer-menu__block > :not(:last-child) {
+  margin-bottom: 1.07rem;
+}
+
+.contact__text {
+  margin-bottom: 1.14rem;
+}
+
+.contact__title {
+  font-size: 0.93em;
+  line-height: 1.85em;
+  letter-spacing: 0.0015em;
+  text-transform: uppercase;
+  margin-bottom: 1.36rem;
+}
+
+.contact__form {
+  width: 100%;
+  border: 1px solid var(--base-color);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 2.14rem;
+}
+
+.contact__form input {
+  background: transparent;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 1rem 1.5rem;
+}
+
+.contact__form input::-webkit-input-placeholder {
+  color: var(--base-color);
+}
+
+.contact__form input::-moz-placeholder {
+  color: var(--base-color);
+}
+
+.contact__form input:-ms-input-placeholder {
+  color: var(--base-color);
+}
+
+.contact__form input::-ms-input-placeholder {
+  color: var(--base-color);
+}
+
+.contact__form input,
+.contact__form input::placeholder {
+  color: var(--base-color);
+}
+
+.contact__form button {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  font-size: 1.36rem;
+  width: 3.79rem;
+  color: var(--icon-color);
+  background-color: var(--base-color);
+}
+
+.contact__form button:hover {
+  background-color: transparent;
+  color: var(--base-color);
+  -webkit-filter: drop-shadow(0px 1px 3px var(--main-color));
+          filter: drop-shadow(0px 1px 3px var(--main-color));
+}
+
+.contact__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.79rem;
+  font-size: 1.86rem;
+}
+
+.contact__link {
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.contact__link:hover {
+  -webkit-filter: drop-shadow(0px 0px 10px var(--gray-color));
+          filter: drop-shadow(0px 0px 10px var(--gray-color));
+}
+
+.desc-footer {
+  margin-bottom: 6.43rem;
+}
+
+.desc-footer > :not(:last-child) {
+  margin-bottom: 1.43rem;
+}
+
+.rights-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.rights-footer__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.rights-footer__link-privacy {
+  padding-right: 0.71rem;
+  border-right: 1px solid var(--base-color);
+}
+
+.rights-footer__link-terms {
+  padding-left: 0.71rem;
+}
+
+.rights-footer__link a:after {
+  background-color: var(--base-color);
+}
 
 @media (min-width: 48em) {
   .block-features__img {
@@ -1706,6 +2097,28 @@ html.no-webp.dark .employers {
             align-items: center;
   }
 
+  .full-screen-section__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+
+  .full-screen-section-bg {
+    width: 100%;
+    height: 50%;
+  }
+
+  .full-screen-section-bg__2 {
+    top: auto;
+    bottom: 0;
+  }
+
+  .full-screen-section__content {
+    padding-top: 22.86rem;
+  }
+
   .hero {
     background-position: 40%, 50%;
   }
@@ -1726,24 +2139,6 @@ html.no-webp.dark .employers {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
-  }
-
-  .brings__body {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-  }
-
-  .brings-bg {
-    width: 100%;
-    height: 50%;
-  }
-
-  .brings-bg__2 {
-    top: auto;
-    bottom: 0;
   }
 
   .brings__subtitle {
@@ -1798,6 +2193,13 @@ html.no-webp.dark .employers {
     background-image: -webkit-gradient(linear, left top, right top, color-stop(10%, rgba(0, 0, 0, 0.9)), color-stop(50%, rgba(0, 0, 0, 0.8)), color-stop(90%, rgba(0, 0, 0, 0.7))), url(../img/employers.jpg);
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.9) 10%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.7) 90%), url(../img/employers.jpg);
     background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.9) 10%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.7) 90%), url(../img/employers.jpg); }
+
+  .post {
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 @media (max-width: 35.94em) {
